# eracuni

./: .gitignore  LICENSE  Makefile  README.md  config.yaml.DEFAULT  config.yaml.default  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  storage.yaml  storage.yaml.default
eracuni/: __init__.py  browser.py  data.py  edb.py  email.py  infostan.py  messages.py  telegram.py
tests/: test_data.py
